--- a/project/pca20020_s132/armgcc/Makefile
+++ b/project/pca20020_s132/armgcc/Makefile
@@ -38,6 +38,7 @@ remduplicates = $(strip $(if $1,$(firstword $1) $(call remduplicates,$(filter-ou
 LIBS += \
 $(abspath ../../../libs/liblibmplmpu_m4_hardfp/liblibmplmpu.a) \
 $(abspath ../../../sdk_components/toolchain/cmsis/dsp/GCC/libarm_cortexM4lf_math.a) \
+$(abspath ../../../sdk_components/nfc/t2t_lib/nfc_t2t_lib_gcc.a) \
 
 #source common to all targets
 C_SOURCE_FILES += \
@@ -63,6 +64,7 @@ $(abspath ../../../source/drivers/drv_humidity.c) \
 $(abspath ../../../source/drivers/drv_hts221.c) \
 $(abspath ../../../source/drivers/drv_ext_light.c) \
 $(abspath ../../../source/drivers/drv_ext_gpio.c) \
+$(abspath ../../../source/drivers/drv_nfc.c) \
 $(abspath ../../../source/util/sx150x_led_drv_calc.c) \
 $(abspath ../../../source/drivers/drv_sx1509.c) \
 $(abspath ../../../source/drivers/drv_bh1745.c) \
@@ -108,11 +110,19 @@ $(abspath ../../../sdk_components/drivers_nrf/pdm/nrf_drv_pdm.c) \
 $(abspath ../../../sdk_components/drivers_nrf/clock/nrf_drv_clock.c) \
 $(abspath ../../../sdk_components/drivers_nrf/saadc/nrf_drv_saadc.c) \
 $(abspath ../../../sdk_components/drivers_nrf/hal/nrf_saadc.c) \
+$(abspath ../../../sdk_components/drivers_nrf/rng/nrf_drv_rng.c) \
+$(abspath ../../../sdk_components/nfc/ndef/launchapp/nfc_launchapp_msg.c) \
+$(abspath ../../../sdk_components/nfc/ndef/launchapp/nfc_launchapp_rec.c) \
+$(abspath ../../../sdk_components/nfc/ndef/uri/nfc_uri_msg.c) \
+$(abspath ../../../sdk_components/nfc/ndef/uri/nfc_uri_rec.c) \
+$(abspath ../../../sdk_components/nfc/ndef/generic/message/nfc_ndef_msg.c) \
+$(abspath ../../../sdk_components/nfc/ndef/generic/record/nfc_ndef_record.c) \
+$(abspath ../../../sdk_components/nfc/ndef/text/nfc_text_rec.c) \
+$(abspath ../../../sdk_components/nfc/t2t_lib/hal_t2t/hal_nfc_t2t.c) \
 $(abspath ../../../sdk_components/libraries/button/app_button.c) \
 $(abspath ../../../sdk_components/libraries/util/app_error.c) \
 $(abspath ../../../sdk_components/libraries/scheduler/app_scheduler.c) \
 $(abspath ../../../sdk_components/libraries/timer/app_timer.c) \
-$(abspath ../../../sdk_components/libraries/timer/app_timer_appsh.c) \
 $(abspath ../../../sdk_components/libraries/util/nrf_assert.c) \
 $(abspath ../../../sdk_components/libraries/uart/retarget.c) \
 $(abspath ../../../sdk_components/libraries/led_softblink/led_softblink.c) \
@@ -121,10 +131,11 @@ $(abspath ../../../sdk_components/libraries/fstorage/fstorage.c) \
 $(abspath ../../../sdk_components/libraries/fds/fds.c) \
 $(abspath ../../../sdk_components/libraries/util/app_util_platform.c) \
 $(abspath ../../../sdk_components/libraries/util/sdk_mapped_flags.c) \
+$(abspath ../../../sdk_components/libraries/queue/nrf_queue.c) \
 $(abspath ../../../external/segger_rtt/RTT_Syscalls_GCC.c) \
 $(abspath ../../../external/segger_rtt/SEGGER_RTT.c) \
 $(abspath ../../../external/segger_rtt/SEGGER_RTT_printf.c) \
-$(abspath ../../../sdk_components/softdevice/common/softdevice_handler/softdevice_handler_appsh.c) \
+$(abspath ../../../external/sdk13_override/softdevice_handler_appsh.c) \
 $(abspath ../../../sdk_components/softdevice/common/softdevice_handler/softdevice_handler.c) \
 $(abspath ../../../sdk_components/toolchain/system_nrf52.c) \
 $(abspath ../../../sdk_components/libraries/log/src/nrf_log_frontend.c) \
@@ -134,68 +145,79 @@ $(abspath ../../../sdk_components/ble/ble_services/ble_dfu/ble_dfu.c) \
 $(abspath ../../../sdk_components/ble/ble_services/ble_bas/ble_bas.c) \
 $(abspath ../../../sdk_components/libraries/bootloader/dfu/nrf_dfu_settings.c) \
 $(abspath ../../../sdk_components/libraries/crc32/crc32.c) \
+$(abspath ../../../sdk_components/libraries/strerror/nrf_strerror.c) \
 #assembly files common to all targets
 ASM_SOURCE_FILES  = $(abspath ../../../sdk_components/toolchain/gcc/gcc_startup_nrf52.S)
 
 #includes common to all targets
-INC_PATHS += -I$(abspath ../../../sdk_components/device)
-INC_PATHS += -I$(abspath ../../../sdk_components/toolchain/cmsis/include)
-INC_PATHS += -I$(abspath ../../../sdk_components/toolchain/gcc)
-INC_PATHS += -I$(abspath ../../../sdk_components/toolchain)
 INC_PATHS += -I$(abspath ../config)
-INC_PATHS += -I$(abspath ../../../sdk_components/ble/ble_advertising)
-INC_PATHS += -I$(abspath ../../../sdk_components/ble/common)
 INC_PATHS += -I$(abspath ../../../external/segger_rtt)
-INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/common)
+INC_PATHS += -I$(abspath ../../../include/ble_services)
+INC_PATHS += -I$(abspath ../../../include/board)
+INC_PATHS += -I$(abspath ../../../include/drivers)
+INC_PATHS += -I$(abspath ../../../include/macros)
+INC_PATHS += -I$(abspath ../../../include/modules)
+INC_PATHS += -I$(abspath ../../../include/util)
+INC_PATHS += -I$(abspath ../../../libs/bv32fp-1.2)
+INC_PATHS += -I$(abspath ../../../libs/dvi_adpcm)
+INC_PATHS += -I$(abspath ../../../libs/eMD6/core/driver/eMPL)
+INC_PATHS += -I$(abspath ../../../libs/eMD6/core/driver/include)
+INC_PATHS += -I$(abspath ../../../libs/eMD6/core/driver/nRF52)
+INC_PATHS += -I$(abspath ../../../libs/eMD6/core/eMPL-hal)
+INC_PATHS += -I$(abspath ../../../libs/eMD6/core/mllite)
+INC_PATHS += -I$(abspath ../../../libs/eMD6/core/mpl)
+INC_PATHS += -I$(abspath ../../../libs/sr3_audio)
+INC_PATHS += -I$(abspath ../../../sdk_components/ble/ble_advertising)
+INC_PATHS += -I$(abspath ../../../sdk_components/ble/ble_services/ble_bas)
+INC_PATHS += -I$(abspath ../../../sdk_components/ble/ble_services/ble_dfu)
+INC_PATHS += -I$(abspath ../../../sdk_components/ble/common)
+INC_PATHS += -I$(abspath ../../../sdk_components/device)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/clock)
-INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/saadc)
+INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/common)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/config)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/delay)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/gpiote)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/hal)
-INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/pstorage)
-INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/uart)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/pdm)
+INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/pstorage)
+INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/pwm)
+INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/rng)
+INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/saadc)
 INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/twi_master)
+INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/uart)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/bootloader/dfu)
 INC_PATHS += -I$(abspath ../../../sdk_components/libraries/button)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/crc32)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/experimental_section_vars)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/experimental_section_vars)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fds)
 INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fifo)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fstorage)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fstorage)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/led_softblink)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/log)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/log/src)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/low_power_pwm)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/scheduler)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/strerror)
 INC_PATHS += -I$(abspath ../../../sdk_components/libraries/timer)
 INC_PATHS += -I$(abspath ../../../sdk_components/libraries/uart)
 INC_PATHS += -I$(abspath ../../../sdk_components/libraries/util)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/log/src)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/log)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fstorage)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fds)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/bootloader/dfu)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/experimental_section_vars)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/crc32)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/led_softblink)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/low_power_pwm)
+INC_PATHS += -I$(abspath ../../../sdk_components/libraries/queue)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/ndef/generic/record)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/ndef/generic/message)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/ndef/launchapp)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/ndef/uri)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/ndef/text)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/t2t_lib)
+INC_PATHS += -I$(abspath ../../../sdk_components/nfc/ndef/text)
 INC_PATHS += -I$(abspath ../../../sdk_components/softdevice/common/softdevice_handler)
 INC_PATHS += -I$(abspath ../../../sdk_components/softdevice/s132/headers)
 INC_PATHS += -I$(abspath ../../../sdk_components/softdevice/s132/headers/nrf52)
-INC_PATHS += -I$(abspath ../../../sdk_components/ble/ble_services/ble_dfu)
-INC_PATHS += -I$(abspath ../../../sdk_components/ble/ble_services/ble_bas)
-INC_PATHS += -I$(abspath ../../../include/ble_services)
-INC_PATHS += -I$(abspath ../../../include/drivers)
-INC_PATHS += -I$(abspath ../../../include/board)
-INC_PATHS += -I$(abspath ../../../include/modules)
-INC_PATHS += -I$(abspath ../../../include/macros)
-INC_PATHS += -I$(abspath ../../../include/util)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/scheduler)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/fstorage)
-INC_PATHS += -I$(abspath ../../../sdk_components/libraries/experimental_section_vars)
-INC_PATHS += -I$(abspath ../../../sdk_components/drivers_nrf/pwm)
+INC_PATHS += -I$(abspath ../../../sdk_components/toolchain)
+INC_PATHS += -I$(abspath ../../../sdk_components/toolchain/cmsis/include)
+INC_PATHS += -I$(abspath ../../../sdk_components/toolchain/gcc)
 INC_PATHS += -I$(abspath ../../../tools/sound)
-INC_PATHS += -I$(abspath ../../../libs/eMD6/core/driver/include)
-INC_PATHS += -I$(abspath ../../../libs/eMD6/core/driver/eMPL)
-INC_PATHS += -I$(abspath ../../../libs/eMD6/core/mpl)
-INC_PATHS += -I$(abspath ../../../libs/eMD6/core/mllite)
-INC_PATHS += -I$(abspath ../../../libs/eMD6/core/eMPL-hal)
-INC_PATHS += -I$(abspath ../../../libs/eMD6/core/driver/nRF52)
-INC_PATHS += -I$(abspath ../../../libs/sr3_audio)
-INC_PATHS += -I$(abspath ../../../libs/dvi_adpcm)
-INC_PATHS += -I$(abspath ../../../libs/bv32fp-1.2)
 
 OBJECT_DIRECTORY = _build
 LISTING_DIRECTORY = $(OBJECT_DIRECTORY)
@@ -207,10 +229,11 @@ BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LIS
 #flags common to all targets
 CFLAGS = -DNRF52
 CFLAGS += -DNRF52832
-CFLAGS += -DNRF_SD_BLE_API_VERSION=3
+CFLAGS += -DNRF52832_XXAA
 CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -D__HEAP_SIZE=0
-CFLAGS += -DNRF_LOG_USES_RTT
+CFLAGS += -DS132
+CFLAGS += -DNRF_SD_BLE_API_VERSION=3
 CFLAGS += -DNRF52_PAN_12
 CFLAGS += -DNRF52_PAN_15
 CFLAGS += -DNRF52_PAN_20
@@ -225,30 +248,31 @@ CFLAGS += -DNRF52_PAN_58
 CFLAGS += -DNRF52_PAN_62
 CFLAGS += -DNRF52_PAN_63
 CFLAGS += -DNRF52_PAN_64
-CFLAGS += -DS132
-CFLAGS += -DNRF_LOG_USES_RTT=1
-CFLAGS += -DBLE_DFU_APP_SUPPORT
-CFLAGS += -DNRF_DFU_SETTINGS_VERSION=1
 CFLAGS += -DSOFTDEVICE_PRESENT
 CFLAGS += -DSWI_DISABLE0
-CFLAGS += -DDEBUG
 CFLAGS += -DBSP_DEFINES_ONLY
 CFLAGS += -DARM_MATH_CM4
 CFLAGS += -DMPU9250
 CFLAGS += -DEMPL
 CFLAGS += -DUSE_DMP
 CFLAGS += -DEMPL_TARGET_NRF52
-CFLAGS += -DCONFIG_NFCT_PINS_AS_GPIOS
+CFLAGS += -DNRF_LOG_USES_RTT
+CFLAGS += -DNRF_LOG_USES_RTT=1
+CFLAGS += -DBLE_DFU_APP_SUPPORT
+CFLAGS += -DNRF_DFU_SETTINGS_VERSION=1
 CFLAGS += -DAUDIO_EQ_DEF=3
+CFLAGS += -DHAL_NFC_ENGINEERING_BC_FTPAN_WORKAROUND
+#
 CFLAGS += -mcpu=cortex-m4
 CFLAGS += -mthumb -mabi=aapcs --std=gnu99
-#CFLAGS += -Wall -Werror -O3 -g3
-CFLAGS += -Wall -O0 -g3
+CFLAGS += -Wall -Werror -O3 -g3
 CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
 # keep every function in separate section. This will allow linker to dump unused functions
 CFLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
 CFLAGS += -fno-builtin --short-enums
+#CFLAGS += -NRF_LOG_ENABLED=1 # Use if RTT output is desired.
 # keep every function in separate section. This will allow linker to dump unused functions
+
 LDFLAGS += -Xlinker -Map=$(LISTING_DIRECTORY)/$(OUTPUT_FILENAME).map
 LDFLAGS += -mthumb -mabi=aapcs -L $(TEMPLATE_PATH) -T$(LINKER_SCRIPT)
 LDFLAGS += -mcpu=cortex-m4
@@ -315,6 +339,9 @@ vpath %.S $(ASM_PATHS)
 
 OBJECTS = $(C_OBJECTS) $(ASM_OBJECTS)
 
+# Special case for inv_mpu as this throws uninitialized warnings
+$(OBJECT_DIRECTORY)/inv_mpu.o : CFLAGS+=-Wno-maybe-uninitialized
+
 nrf52832_xxaa_s132: OUTPUT_FILENAME := nrf52832_xxaa_s132
 nrf52832_xxaa_s132: LINKER_SCRIPT=ble_app_thingy_gcc_nrf52.ld
 
@@ -378,6 +405,6 @@ flash: nrf52832_xxaa_s132
 
 ## Flash softdevice
 flash_softdevice:
-	@echo Flashing: s132_nrf52_3.0.0_softdevice.hex
-	nrfjprog --program ../../../sdk_components/softdevice/s132/hex/s132_nrf52_3.0.0_softdevice.hex -f nrf52 --chiperase
+	@echo Flashing: s132_nrf52_2.0.0_softdevice.hex
+	nrfjprog --program ../../../sdk_components/softdevice/s132/hex/s132_nrf52_2.0.0_softdevice.hex -f nrf52 --chiperase
 	nrfjprog --reset -f nrf52
